Fri Aug 27 09:03:12 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:

          Changed the wchar_t setting to FALSE which is the default for new
          projects created in Visual C++ 7.  It can be changed to TRUE by
          passing "-value_template wchar_t=TRUE" to MPC.

Fri Aug 27 08:35:39 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a problem with the circular project dependency detection
          algorithm.  Previously, it could take days to detect a circular
          dependency if there were a large number of projects.

Thu Aug 26 17:38:41 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Fix tipos, forgot a leading $.

Thu Aug 26 09:14:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeProjectCreator.pm:
        * modules/AutomakeWorkspaceCreator.pm:

          Give proper credit to the authors of these files.

        * modules/ProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:

          Corrected a bug where dependencies would not be placed in the
          workspace when the -apply_project option was used (in conjunction
          with -name_modifier).

        * modules/WorkspaceCreator.pm:

          Fixed a problem with the group circular dependency detection
          algorithm.  Previously, it could take days to detect a circular
          dependency if there were a large number of directories.

Wed Aug 18 23:08:35 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Changed to scan the generated project files for the use of
          $(ACE_ROOT), $(TAO_ROOT), etc. and provide the appropriate
          definition if they are found.  While this behavior is ACE/TAO
          specific, there isn't much that can be done without something
          like a workspace template.
